--- a/package.json
+++ b/package.json
@@ -9,6 +9,12 @@
   "categories": [
     "Programming Languages"
   ],
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/purgea/easyfps-fsm"
+  },
+  "license": "MIT",
+  "publisher": "purgea",
   "contributes": {
     "languages": [
       {
